--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "@testing-library/jest-dom": "^5.11.10",
         "@testing-library/react": "^11.2.5",
         "@testing-library/user-event": "^12.8.3",
+        "dotenv": "^16.3.1",
         "firebase": "^8.3.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
@@ -28,7 +29,7 @@
     },
     "resolutions": {
         "babel-loader": "8.1.0"
-      },
+    },
     "eslintConfig": {
         "extends": [
             "react-app",
